added kafka mail notifier